[tool.poetry]
name = "pomodoro"
version = "0.1.0"
description = ""
authors = ["amit-bakhru <amit@area1security.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py2app = "^0.21"
rumps = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
