[tool.poetry]
name = "pomodoro"
version = "0.1.0"
description = ""
authors = ["amit-bakhru <amit@area1security.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py2app = "^0.21"
rumps = "^0.3.0"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"
bandit = "^1.6.2"

[tool.bandit]
targets = ["pomodoro"]
skips = ["B101", "B110"]

[build-system]
requires = ["poetry>=1.0", "pip>=19.3.1", "setuptools>=45.0.0"]
build-backend = "poetry.masonry.api"
